--- a/InsideJS_Ch4/.project
+++ b/InsideJS_Ch4/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>InsideJS_Ch4</name>
+	<name>InsideJS</name>
 	<comment></comment>
 	<projects>
 	</projects>
